vivado/214/proj_extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c:1:
extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c:56:19: error: expected identifier or '('
  const uint8_t (*)[8] dither;
                  ^
extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c:58:84: error: use of undeclared identifier 'dither'
  store_slice16_c(dst, src, dst_linesize, src_linesize, width, height, log2_scale, dither, depth);
                                                                                   ^
2 errors generated.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/aut/proj_extr_.opensslcryptoececp_nistp521.c_felem_reduce_with_main.c'.
INFO: [HLS 200-10] Adding design file 'extr_.opensslcryptoececp_nistp521.c_felem_reduce_with_main.c' to the project
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/aut/proj_extr_.opensslcryptoececp_nistp521.c_felem_reduce_with_main.c/solution1'.
